Update to use ProcessBuilder to run external commands